2021-11-08  Yusuke Suzuki  <ysuzuki@apple.com>

        [libpas] Enable libpas on iOS family
        https://bugs.webkit.org/show_bug.cgi?id=232026

        Reviewed by Filip Pizlo.

        Enabling libpas on iOS family platforms. This helps libpas transition.
        And it offers large performance improvement.

            1. Speedometer2 is 0.7% improved on low-end iOS device (iPhone 6s Plus), 1.3% improved on high-end iOS device (iPhone 12).
            2. JetStream2 is neutral on both.

        * bmalloc/BPlatform.h:

2021-11-08  Yusuke Suzuki  <ysuzuki@apple.com>

        Unreviewed, tweak header include
        https://bugs.webkit.org/show_bug.cgi?id=231815

        * libpas/src/libpas/pas_thread_local_cache.h:
        * libpas/src/libpas/pas_utils.h:

2021-11-08  Yusuke Suzuki  <ysuzuki@apple.com>

        Unreviewed, fix internal build failure on Catalina
        https://bugs.webkit.org/show_bug.cgi?id=231815

        Several pthread functions are not available.

        * bmalloc/BPlatform.h:
        * libpas/src/libpas/pas_thread_local_cache.h:
        (pas_thread_local_cache_is_guaranteed_to_destruct):
        (pas_thread_local_cache_can_set):
        * libpas/src/libpas/pas_utils.h:

2021-11-08  Yusuke Suzuki  <ysuzuki@apple.com>

        [libpas] Enable libpas on macOS
        https://bugs.webkit.org/show_bug.cgi?id=231815

        Reviewed by Filip Pizlo.

        Enabling libpas on x64 macOS. Previously, we enabled it only on AppleSilicon.
        This helps stressing libpas more. And it offers large performance improvement.

            1. Speedometer2 is 2.1% improved on low-end macOS (MBA8,2) and 1.7% improved on high-end macOS (MBP14,1).
            2. JetStream2 is neutral on both.

        libpas is written in C to be portable to the other components. But since C does not have templates,
        we are using particular programming pattern where we pass set of functions annotated with ALWAYS_INLINE to