@@ -1,3 +1,10 @@
+2021-11-09  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        Unreviewed, disabling libpas on ARM64 (not ARM64E!) for now due to performance issue only happening on newer SDK
+        https://bugs.webkit.org/show_bug.cgi?id=232026
+
+        * bmalloc/BPlatform.h:
+
 2021-11-08  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [libpas] Enable libpas on iOS family
